создала основные страницы

--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -15,6 +15,17 @@
 body{
   font-family: "Pragmatica_Regular";
 }
+
+
+/*
+_
+| |
+_ __ ___   ___ _ __  _   _ ______| |__   __ _ _ __
+| '_ ` _ \ / _ \ '_ \| | | |______| '_ \ / _` | '__|
+| | | | | |  __/ | | | |_| |      | |_) | (_| | |
+|_| |_| |_|\___|_| |_|\__,_|      |_.__/ \__,_|_|
+*/
+
         nav{
           width: 100vw;
           height: 144px;
@@ -54,16 +65,209 @@ body{
         #s5{ grid-area:2/5/3/7; }
         #s6{ grid-area:2/7/3/9; }
 
-
        #s1, #s4, #s5, #s6{
           /* width: 1fr; */
           width: 25vw;
        }
         /* #s4{ grid-area: 2/2/3/3} */
-
        }
        #s2,#s3{
          /* width: 1fr; */
          width: 37.5vw;
+       }
 
+
+/*     _
+      (_)
+_ __ ___   __ _ _ _ __
+| '_ ` _ \ / _` | | '_ \
+| | | | | | (_| | | | | |
+|_| |_| |_|\__,_|_|_| |_|
+*/
+
+
+
+
+       main{
+         width: 100vw;
+         height: auto;
+         display: grid;
+         grid-template-columns: repeat(4, 1fr);
+         grid-template-rows: 1fr, 1fr;
+         font-size: 1em;
+         box-sizing: border-box;
+
+       }
+       .news{
+         width: 25vw;
+         height: 20em;
+         border-right: solid 1px black;
+         border-bottom:solid 1px black;
+         box-sizing: border-box;
+       position: relative;
+       box-sizing: border-box;
+
+       }
+       .wallpaper{
+         width: 25vw;
+         height: 40em;
+         border-right: solid 1px black;
+         border-bottom:solid 1px black;
+         box-sizing: border-box;
+         grid-area: 1/4/3/5;
+       }
+       .unity{
+         width: 75vw;
+         height: 20em;
+         border-right: solid 1px black;
+         border-bottom:solid 1px black;
+         box-sizing: border-box;
+         grid-area: 2/1/3/4;
+       }
+
+       h5{
+         font-family: "Pragmatica_Bold";
+         font-size: 2.8em;
+         text-align: center;
+         margin: 0.5em;
+       }
+       p{
+           font-family: "Pragmatica_Regular";
+           margin-bottom: 0.5em;
+           text-align: center;
+           vertical-align: bottom;
+           display: inline-grid;
+           align-items: flex-end;
+           font-size: 1.2em;
+           line-height: 1.5em;
+           margin-right: 1em;
+       }
+       .text{
+         align-items: flex-end;
+       }
+       main div {
+         text-align: center;
+       text-decoration: none;
+       align-items: flex-end;
+       color: black;
+       /* padding: 1em; */
+       }
+       .event{
+         box-sizing: border-box;
+         /* outline: 1.5em solid #E0E2D0; */
+       }
+       .news{
+         align-items: flex-end;
+       }
+       .news .mini_link{
+         position: absolute;
+         margin-bottom:
+         /* bottom: 0; */
+       }
+       .wallpaper{
+         background-image: url("../images/katalog/03.png");
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: 236%;
+       }
+       .unity p {
+         padding-left: 10em;
+         padding-right:  10em;
+       }
+       .questions{
+       width: 100vw;
+       height: 2em;
+       display: inline-grid;
+       font-family: "Pragmatica_Bold";
+       font-size: 2.8em;
+       border-bottom:solid 1px black;
+       grid-area: 3/1/4/9;
+          color: black;
+          -webkit-text-stroke: 1px black;
+          -webkit-text-fill-color: white;
+       }
+
+       .mini_link{
+         font-size: 1em;
+         color: #C4C4C4;
+       }
+/*
+       __            _
+      / _|          | |
+     | |_ ___   ___ | |_ ___ _ __
+     |  _/ _ \ / _ \| __/ _ \ '__|
+     | || (_) | (_) | ||  __/ |
+     |_| \___/ \___/ \__\___|_|
+*/
+
+
+       footer{
+         width: 100vw;
+         height: 25rem;
+         display: grid;
+         grid-template-columns: repeat(4, 1fr);
+         grid-template-rows: 1fr, 1fr;
+         box-sizing: border-box;
+         align-items: flex-end;
+       }
+       footer .mail {
+         width: 100vw;
+         height: 10em;
+         grid-area: 1/1/2/5;
+       }
+       footer .inf_blocks {
+         width: 25vw;
+         height: 10em;
+
+       }
+
+       input{
+         width: 23em;
+         height: 1.8em;
+         font-size: 1.25em;
+         font-family: "Pragmatica_Italic"
+       }
+       .inf_blocks {
+         text-align: center;
+         display: block;
+       }
+       .inf_blocks a {
+         margin-bottom: 3em;
+         color: black;
+         text-decoration: none;
+         font-family: "Pragmatica_Regular";
+         margin-bottom: 0.5em;
+        font-size: 1.2em;
+        line-height: 1.5em;
+       }
+       .mail{
+         align-content: flex-start;
+       }
+       .mail p {
+         display: block;
+         display: block;
+         text-align: start;
+         margin-left: 12.5vw;
+       }
+       .mail input{
+         display: inline-block;
+         text-align: start;
+         margin-left: 12.5vw;
+         vertical-align: middle;
+             color: #c4c4c4;
+
+       }
+       .mail button {
+         cursor: pointer;
+         display: inline-block;
+         margin-left: 1em;
+         vertical-align: middle;
+         width: 5rem;
+         height: 2.5rem;
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: contain;
+         border: none;
+         background-image: url("../images/arrow_btn.svg");
+         background-color: white;
        }
