--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -60,7 +60,7 @@ _ __ ___   ___ _ __  _   _ ______| |__   __ _ _ __
           /* background-size: contain; */
         }
         #s2{ grid-area:1/3/2/6; }
-        #s3{ grid-area:1/5/2/9; }
+        #s3{ grid-area:1/6/2/9; }
         #s4{ grid-area:2/3/3/5; }
         #s5{ grid-area:2/5/3/7; }
         #s6{ grid-area:2/7/3/9; }
@@ -91,12 +91,14 @@ _ __ ___   __ _ _ _ __
        main{
          width: 100vw;
          height: auto;
+
+         font-size: 1em;
+         box-sizing: border-box;
+       }
+       .index{
          display: grid;
          grid-template-columns: repeat(4, 1fr);
          grid-template-rows: 1fr, 1fr;
-         font-size: 1em;
-         box-sizing: border-box;
-
        }
        .news{
          width: 25vw;
