--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -51,6 +51,19 @@ _ __ ___   ___ _ __  _   _ ______| |__   __ _ _ __
           text-decoration: none;
           align-items: center;
           color: black;
+          /* background: rgb(255,255,255); */
+
+          /* transition: 1s all; */
+          /* transition-duration: 1s; */
+
+        }
+        nav a:hover{
+          /* transition-duration: 1s; */
+          /* transition: 1s all; */
+
+          /* transition: 2s; */
+          background: rgb(0,255,25);
+          background: linear-gradient(180deg, rgba(0,255,25,1) 0%, rgba(255,255,255,0) 100%);
         }
         #s1{
           height: 144px;
