--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -69,6 +69,8 @@
 
 #s_1{background-image: url("../images/shop/product_01.png");}
 #s_2{background-image: url("../images/shop/product_06.png");}
+#s_3{background-image: url("../images/items_images/shtani.png");}
+
 
 #a_1{background-image: url("../images/shop/product_05.png");}
 #a_2{background-image: url("../images/shop/product_02.png");}
