--- a/shop_items/items.css
+++ b/shop_items/items.css
@@ -119,3 +119,6 @@ main div{
   cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/dc03f55b590552ce8b4e533f753be0febfd12843/images/cursor_p.svg"), pointer;
 
 }
+footer {
+  border-top: 1px solid black;
+}
