--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -100,6 +100,8 @@ _ __ ___   ___ _ __  _   _ ______| |__   __ _ _ __
           background-image: url("../images/impress_logo.svg");
           background-repeat: no-repeat;
           background-position: center;
+          transition: .2s all ease;
+
           /* background-size: contain; */
         }
         #s2{ grid-area:1/3/2/6; }
@@ -117,6 +119,11 @@ _ __ ___   ___ _ __  _   _ ______| |__   __ _ _ __
        #s2,#s3{
          /* width: 1fr; */
          width: 37.5vw;
+       }
+       #s1:hover {
+        background-image: url("../images/impress_logo_hover.png");
+        transition: .5s all ease;
+
        }
 
 
