--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -37,6 +37,12 @@ input {
   cursor: url("https://github.com/Kovriki/impress_web/blob/main/images/cursor.png?raw=true"), auto;
 }
 
+.cursor{
+  width: 16px;
+  height: 16px;
+  background-color: rgba(0,255,25,1);
+  
+}
 
 
 /*
