--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -1,5 +1,8 @@
 @media only screen and (min-width: 1024px) and (max-width: 1280px) {
   /* ipadik */
+  /* .member_popup, .black{
+   display: none  ;
+ } */
   .index{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
@@ -34,6 +37,9 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 /* iPad Portrait */
+ .member_popup, .black{
+  display: none  ;
+}
     body{
       font-size: 1.3em;
     }
@@ -102,57 +108,54 @@
       grid-area: 1/3/2/4;
     }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px)  {
   /* telefon4ik */
-
-/* nav{
-  nav{
-    height: 144px;
-    grid-template-rows: 1;
-    grid-template-columns: 1fr 1fr;;
+  .cursor, .member_popup, .black{
+    display: none  ;
   }
-}
-#s1{
-  width: 50vw;
-}
-#s2, #s3, #s4, #s5, #s6 {
-  display: none;
-}
+  nav{
+      height: 144px;
+      grid-template-rows: 1;
+      grid-template-columns: 1fr 1fr;;
 
-
-
-
-
-
-
-
-
-
-
-
-
+  }
+  .dop{
+    position: block;
+  }
+  #s1{
+    width: 50vw;
+  }
+  #s2, #s3, #s4, #s5, #s6 {
+    display: none;
+  }
   body{
     font-size: 1.3em;
+    transition: 1s all ease;
   }
   .index{
     grid-template-columns:  1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr auto;
+    grid-template-rows: 1fr 1fr 1fr 1fr auto;
   }
-  .news, .wallpaper, .fest,  .unity {
+  .news, .wallpaper, .fest, .unity {
     width: 100vw;
     height: 25em;
   }
-  .wallpaper{
-    grid-area: 2/1/3/2;
-  }
-  .fest{
-    grid-area: 2/1/4/2;
+  .news{
+    grid-area: 1/1/2/2;
   }
   .event{
     grid-area: 2/1/3/2;
   }
+  .fest{
+    grid-area: 3/1/4/2;
+  }
+  .wallpaper{
+    grid-area: 4/1/5/2;
+  }
   .unity {
-    grid-area: 3/1/4/3;
+    grid-area: 5/1/6/2;
+    position: relative;
+    height: 35em;
   }
   .unity p, .news p {
     padding-left: 2em;
@@ -161,5 +164,103 @@
   .questions{
     grid-area: 4/1/5/3;
     overflow: hidden;
+  }
+  #s1{
+    border:1px solid black;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  #s1,#s2, #s3, #s4, #s5, #s6, .icon-close{
+    display: block;
+    width: 50vw;
+    height: 25vh;
+
+  }
+  #s2{ grid-area:2/1/3/2; }
+  #s3{ grid-area:2/2/3/3; }
+  #s4{ grid-area:3/1/4/2; }
+  #s5{ grid-area:3/2/4/3; }
+  #s6{ grid-area:4/1/5/2; }
+  nav{
+    width: 100vw;
+  height: 100vh;
+    transition: all .4s ease;
+    display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 25vh 25vh 25vh 25vh;
+  }
+  .menu-non-active{
+    width: 50vw;
+    height: 25vh;
+    display: grid;
+    box-sizing: border-box;
+        grid-template-columns: 1fr 1fr;
+        transition: all .4s ease;
+
+  }
+  .menu-non-active #s1{
+    grid-area: 1/1/2/2;
+  }
+  .menu-non-active .icon-close{
+    grid-area: 1/2/2/3;
+  }
+
+  .fade{
+    display: none;
+  }
+  .hidden{
+    /* opacity: 0; */
+    height: 25vh;
+    transition: .8s all ease;
+  }
+  .fade{
+    display: none;
+  }
+  footer {
+    height: 100vh;
+    /* grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr); */
+    overflow: hidden;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  footer .mail {
+    grid-area: 1/1/2/2;
+
+  }
+  .icon-more,.icon-close{
+    width: 50vw;
+    height: 25vh;
+    background-color: blue;
+    display: grid;
+    grid-area:1/2/2/3;
 }
-} */
+  footer .inf_blocks{
+    width: 100vw;
+    height: 7em;
+  }
+  footer .inf_blocks p{
+    margin: 0;
+  }
+  footer .mail p{
+    margin-top: 3em;
+    line-height: 1em;
+    margin-left: 8.5vw;
+  }
+  input{
+    padding-left: 20px;
+  }
+  .mail{
+    margin-bottom: 1em;
+  }
+  .mail input{
+    display: inline-block;
+    text-align: start;
+    margin-left: 8.5vw;
+    vertical-align: middle;
+    color: black;
+    width: 50vw;
+
+  }
+}
