--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,5 +1,5 @@
 * {
-  cursor: none;
+  cursor: none !important;
 }
 @font-face {
   font-family: "Pragmatica_Italic";
@@ -13,10 +13,15 @@
   font-family: "Pragmatica_Bold";
   src: url('../fonts/Pragmatica_bold.otf')
 }
+.gif-box{
+  overflow: hidden;
+}
 .cursor {
   position: absolute;
   height: 40px;
   width: 40px;
+  /* height: 32px;
+  width: 32px; */
   border-radius: 50%/50%;
   background-color: #2f0;
   /* filter: blur(6px); */
