--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -119,6 +119,9 @@
       grid-template-columns: 1fr 1fr;;
 
   }
+  nav a{
+        padding-top: 50%;
+  }
   .dop{
     position: block;
   }
@@ -169,18 +172,30 @@
     border:1px solid black;
     padding: 0;
     box-sizing: border-box;
+    background-size: 90%;
   }
   #s1,#s2, #s3, #s4, #s5, #s6, .icon-close{
     display: block;
     width: 50vw;
     height: 25vh;
-
   }
+
   #s2{ grid-area:2/1/3/2; }
   #s3{ grid-area:2/2/3/3; }
   #s4{ grid-area:3/1/4/2; }
   #s5{ grid-area:3/2/4/3; }
   #s6{ grid-area:4/1/5/2; }
+
+  #s2,
+  #s3,
+  #s4,
+  #s5,
+  #s6{ display: grid;  }
+  #s2 p,
+  #s3 p,
+  #s4 p,
+  #s5 p,
+  #s6 p{ margin: auto; }
   nav{
     width: 100vw;
   height: 100vh;
@@ -232,9 +247,11 @@
   .icon-more,.icon-close{
     width: 50vw;
     height: 25vh;
-    background-color: blue;
+    /* background-color: blue; */
+    border-bottom: 1px solid black;
     display: grid;
     grid-area:1/2/2/3;
+    box-sizing: border-box;
 }
   footer .inf_blocks{
     width: 100vw;
