--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -195,6 +195,8 @@ input[type="email"]:focus{
   #s1{
     border:1px solid black;
     padding: 0;
+    border-top: none;
+    
     box-sizing: border-box;
   }
   #s1,#s2, #s3, #s4, #s5, #s6, .icon-close{
