--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -27,6 +27,9 @@
     grid-area: 4/1/5/3;
     overflow: hidden;
   }
+  .member_popup {
+    display: none;
+  }
 
 
 }
@@ -106,6 +109,9 @@
     }
     .inst {
       grid-area: 1/3/2/4;
+    }
+    .member_popup {
+      display: none;
     }
 }
 @media only screen and (max-width: 768px)  {
