--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -196,7 +196,7 @@ input[type="email"]:focus{
     border:1px solid black;
     padding: 0;
     border-top: none;
-    
+
     box-sizing: border-box;
   }
   #s1,#s2, #s3, #s4, #s5, #s6, .icon-close{
@@ -261,6 +261,9 @@ input[type="email"]:focus{
     display: grid;
     grid-area:1/2/2/3;
 }
+ .member_popup {
+   display: none;
+ }
 
 }
 
