--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -116,7 +116,7 @@
 }
 @media only screen and (max-width: 768px)  {
   /* telefon4ik */
-  .cursor, .member_popup, .black{
+ .member_popup, .black{
     display: none  ;
   }
   nav{
